# muxai-ai

./: .env.example  .gitignore  CHANGELOG.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json  settings.local.json
apps/api/: package.json  prisma.config.ts  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: env.ts  index.ts
apps/api/src/__tests__/: events.integration.test.ts  runs.integration.test.ts  setup-db.ts
apps/api/src/lib/: db.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: agents.ts  chat.ts  contractors.ts  control-tower.ts  events.ts  mcp-servers.ts  roles.ts  runs.ts  sandbox.ts  schedulers.ts  settings.ts
apps/api/src/services/: chat-runner.ts  database.ts  events-collector.ts  heartbeat.ts  internal-secret.ts  models.ts  notifications.ts  run-events.ts  scheduler-registry.ts  scheduler.ts  trade-resolver-tick.ts  trade-resolver.ts  wallet.ts
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: events-stream.tsx  (+12 more)
config/: mcp-registry.json
docs/: docs.json  introduction.mdx  quickstart.mdx
docs/core-concepts/: control-tower.mdx  mcp-servers.mdx  orchestration.mdx  streaming.mdx
docs/guides/: add-custom-mcp-server.mdx  build-mcp-server.mdx
install/: install.ps1  install.sh  update.ps1  update.sh
solana/: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml
solana/programs/decision-log/: Cargo.toml
solana/programs/decision-log/src/: lib.rs
solana/tests/: decision-log.ts
(+58 files in other folders)
