[package]
name = "decision-log"
version = "0.1.0"
description = "muxAI Decision Log — on-chain ledger of AI agent trade decisions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "decision_log"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
